Closed
Bug 237954
Opened 21 years ago
Closed 21 years ago
"nsAccessibleHyperText::GetLink" doesn't return proper link
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Louie.Zhao, Assigned: aaronlev)
Details
Attachments
(2 files)
|
423 bytes,
text/html
|
Details | |
|
1.19 KB,
patch
|
yuanyi21
:
review+
Henry.Jia
:
superreview+
|
Details | Diff | Splinter Review |
"nsAccessibleHyperText::GetLink" makes assumption that link node is the parent
of text node. Actually link node may be grandparent (or grand-grand-parent, ...)
of text node (e.g. in the testcase, the structure of "Item 3" is "A(link) ->
B(bond) -> Text"). This patch changes the code for "searching link node for text
node".
| Reporter | ||
Comment 1•21 years ago
|
||
Enviornment: GNOME 2.5.91; Gnopernicus 0.7.6
Reproduce step:
1. using "tab" to move focus to item1,2,....
Expected result:
gnopernicus display "LNK Item1", "LNK Item2", "LNK Item3", "LNK Item4"
correspondingly.
Actual result:
gnopernicus won't display "LINK Item3","LINK Item4","LINK Item5"
| Reporter | ||
Comment 2•21 years ago
|
||
| Reporter | ||
Updated•21 years ago
|
Attachment #144295 -
Flags: review?(kyle.yuan)
Attachment #144295 -
Flags: review?(kyle.yuan) → review+
Comment on attachment 144295 [details] [diff] [review]
patch v1
sr = Henry
Attachment #144295 -
Flags: superreview+
| Reporter | ||
Comment 4•21 years ago
|
||
Thanks for r and sr. Patch checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 5•21 years ago
|
||
This bug is not yet fixed, because the patch was checked in but later backed out.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 6•21 years ago
|
||
Ignore comment 5 - this patch was not backed out.
Status: REOPENED → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•