Bug 237954 "nsAccessibleHyperText::GetLink" doesn't return proper link r  = kyle.yuan@sun.com sr = henry.jia@sun.com